--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.3.0",
     "vue-router": "^3.2.0",
@@ -28,7 +29,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "npm:sass@^1.49.8",
+    "node-sass": "npm:sass@^1.55.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
