--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.3.0",
     "vue-router": "^3.2.0",
+    "vue-sidebar-menu-akahon": "^0.1.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
