--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "express": "^4.18.2",
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.3.0",
     "vue-router": "^3.2.0",
-    "vue-sidebar-menu-akahon": "^0.1.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
