--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-draggable-resizable": "^2.3.0",
     "vue-router": "^3.2.0",
+    "vue-session": "^1.0.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
